--- a/.github/workflows/ice_ci.yaml
+++ b/.github/workflows/ice_ci.yaml
@@ -18,7 +18,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install all requirements
-        run: pip install -r requirements.txt
+        run: pip install .
 
       - name: Run the tests
         run: pytest -v
